# books-crud

./: .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
app/: crud.py  db.py  main.py  models.py  schemas.py
kubernetes/: database.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
