[tool.poetry]
name = "cicd-project"
version = "0.1.0"
description = ""
authors = ["Delemangi <milev.stefan@gmail.com>"]
readme = "README.md"
packages = [{ include = "cicd_project" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
pydantic = "^1.10.9"
SQLAlchemy = "^2.0.16"
psycopg2-binary = "^2.9.6"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
